--- a/buildSrc/src/main/groovy/scindx.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/scindx.java-common-conventions.gradle
@@ -4,6 +4,7 @@
 
 plugins {
     id 'java'
+    id 'org.javamodularity.moduleplugin'
 }
 
 repositories {
@@ -15,7 +16,8 @@ dependencies {
     constraints {
         // Define dependency versions as constraints
         implementation 'org.apache.commons:commons-text:1.9'
-        implementation 'io.dropwizard:dropwizard-core:2.1.4'
+        implementation 'io.dropwizard:dropwizard-core:4.0.0-beta.3'
+        implementation 'javax.validation:validation-api:2.0.1.Final'
     }
 
     // Use JUnit Jupiter for testing.
