--- a/scindx-application/build.gradle
+++ b/scindx-application/build.gradle
@@ -3,8 +3,10 @@ plugins {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-text'
+    // implementation 'org.apache.commons:commons-text'
     implementation 'io.dropwizard:dropwizard-core'
+    implementation 'javax.validation:validation-api'
+
     implementation project(':scindx-api')
 }
 
